# advent

./: Manifest.toml  Project.toml  README.md  common.jl  day_01.jl  day_02.jl  day_03.jl  day_04.jl  day_08.jl  day_11.jl  day_14.jl  day_15.jl
2021/: Project.toml  day_01.jl  day_02.jl  day_03.jl  day_05.jl  day_06.jl  day_07.jl  day_09.jl  day_10.jl  day_12.jl  day_13.jl
2022/: Manifest.toml  Project.toml  common.jl  day_01.jl  day_02.jl  day_03.jl  day_04.jl  day_05.jl  day_06.jl  day_07.jl  day_08.jl  day_09.jl  day_10.jl  day_11.jl  day_12.jl  day_13.jl  day_14.jl  day_15.jl
2023/: Cargo.toml
2023/day-01/: Cargo.toml
2023/day-01/src/: main.rs
2023/day-02/: Cargo.toml
2023/day-02/src/: main.rs
2023/day-03/: Cargo.toml
2023/day-03/src/: main.rs
2023/day-04/: Cargo.toml
2023/day-04/src/: main.rs
2023/day-05/: Cargo.toml
2023/day-05/src/: main.rs
2023/day-06/src/: main.rs
2023/day-07/: Cargo.toml
2023/day-07/src/: main.rs
2023/day-08/: Cargo.toml
2023/day-08/src/: main.rs
2023/day-09/: Cargo.toml
2023/day-09/src/: main.rs
2023/day-10/: Cargo.toml
2023/day-10/src/: main.rs
2023/day-11/: Cargo.toml
2023/day-11/src/: main.rs
2023/day-12/: Cargo.toml
2023/day-12/src/: main.rs
2025/: day_01.zig  day_02.zig  day_03.zig  day_04.zig  hello.zig
