[workspace]
members = ["day-*/"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.81"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allowed pedantic lints
if_not_else = "allow"
similar_names = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
